--- a/SOC2-Web/dockerfile
+++ b/SOC2-Web/dockerfile
@@ -3,18 +3,17 @@ FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /src
 
 # Copy project files
-COPY ["SOC2-Web/ShadeOfColor2.API/ShadeOfColor2.API.csproj", "ShadeOfColor2.API/"]
-COPY ["SOC2-Web/SOC2-web.Core/SOC2-web.Core.csproj", "SOC2-web.Core/"]
-COPY ["SOC2-Web/SOC2-web.sln", "./"]
+COPY ["ShadeOfColor2/ShadeOfColor2.csproj", "ShadeOfColor2/"]
+COPY ["ShadeOfColor2.sln", "./"]
 
 # Restore packages
-RUN dotnet restore "ShadeOfColor2.API/ShadeOfColor2.API.csproj"
+RUN dotnet restore "ShadeOfColor2/ShadeOfColor2.csproj"
 
 # Copy everything else
-COPY SOC2-Web/ .
+COPY . .
 
 # Publish
-RUN dotnet publish "ShadeOfColor2.API/ShadeOfColor2.API.csproj" \
+RUN dotnet publish "ShadeOfColor2/ShadeOfColor2.csproj" \
     -c Release \
     -o /app/publish
 
@@ -31,4 +30,4 @@ COPY --from=build /app/publish .
 EXPOSE 80
 ENV ASPNETCORE_URLS=http://+:80
 
-ENTRYPOINT ["dotnet", "ShadeOfColor2.API.dll"]
+ENTRYPOINT ["dotnet", "ShadeOfColor2.dll"]
