--- a/railway.toml
+++ b/railway.toml
@@ -1,6 +1,6 @@
 [build]
 builder = "dockerfile"
-dockerfilePath = "dockerfile"
+dockerfilePath = "Dockerfile"
 
 [deploy]
 startCommand = "dotnet ShadeOfColor2.API.dll"
